# ProjetCompta

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  docker-compose.yml
back/: .env  Cargo.toml
back/migrations/: 20260711152459_create_users_table.sql
back/src/: main.rs
back/src/auth/: handlers.rs  mod.rs  models.rs
