[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "1.23.4", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"]}

argon2 = "0.5"
jsonwebtoken = "10.4"
rand = "0.8"